--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h1 class="text-light"><a href="index.html">Fajar Adi Prasetio</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://wa.me/+6289619267375" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
-          <a href="mailto:fajaarapp@gmail.com" class="gmail"><i class="bx bxl-gmail"></i></a>
+          <a href="mailto:fajaradiprasetio@gmail.com" class="gmail"><i class="bx bxl-gmail"></i></a>
           <a href="https://www.linkedin.com/in/fajar-adi-prasetio/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/FajarAdi25" class="github"><i class="bx bxl-github"></i></a>
         </div>
@@ -75,7 +75,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Fajar Adi Prasetio</h1>
-      <p>I'm <span class="typed" data-typed-items="Data Enthusiast, Programming Developer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="AI Enthusiast, Programming Developer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -95,9 +95,7 @@
             <img src="assets/img/profile-img.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Data Analyst, Machine Learning Developer &amp; Back End Developer.</h3>
-            <p class="fst-italic">
-            </p>
+            <h3>AI Enthusiast &amp; Programming Developer.</h3>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -105,7 +103,8 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
                     <span>https://fajaradi25.github.io/</span>
                   </li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>fajaarapp@gmail.com</span>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
+                    <span>fajaradiprasetio@gmail.com</span>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+62 896 1926 7375</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>South Jakarta, Indonesia</span>
                   </li>
@@ -125,10 +124,9 @@
               </div>
             </div>
             <p>
-              Graduated from Informatics Engineering Department at Universitas Indraprasta. Driven by analytical
-              thinking and programming skills. Transitioning from a career in sales and seeking a full-time or
-              internship role in the field of Data Analytics or Back End Developer. Highly passionate about data and
-              programming. Willing to challenge myself through working across disciplines in a dynamic environment. </p>
+              Graduated from the Informatics Engineering department at Universitas Indraprasta. Highly passionate about
+              AI and Programming. Have knowledge using Python, R, SQL, JavaScript, HTML, and CSS. Able to work in a team
+              and have good communication skills. </p>
           </div>
         </div>
 
@@ -196,26 +194,27 @@
         <div class="row skills-content">
 
           <div class="col-lg-6" data-aos="fade-up">
+
             <div class="progress">
-              <span class="skill">HTML<i class="val">70%</i></span>
+              <span class="skill">JavaScript <i class="val">Intermediate</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">70%</i></span>
+              <span class="skill">Python <i class="val">Intermediate</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
+              <span class="skill">HTML <i class="val">Intermediate</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -225,25 +224,25 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">Python <i class="val">80%</i></span>
+              <span class="skill">SQL <i class="val">Intermediate</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">SQL <i class="val">80%</i></span>
+              <span class="skill">R <i class="val">Advanced</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">R <i class="val">80%</i></span>
+              <span class="skill">CSS <i class="val">Intermediate</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -256,9 +255,9 @@
 
           <div class="col-lg-6" data-aos="fade-up">
             <div class="progress">
-              <span class="skill">MySQL<i class="val">80%</i></span>
+              <span class="skill">MySQL<i class="val">Intermediate</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -266,9 +265,9 @@
 
           <div class="col-lg-6" data-aos="fade-up">
             <div class="progress">
-              <span class="skill">BigQuery<i class="val">75%</i></span>
+              <span class="skill">BigQuery<i class="val">Intermediate</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -276,9 +275,9 @@
 
           <div class="col-lg-6" data-aos="fade-up">
             <div class="progress">
-              <span class="skill">Amazon Web Services (AWS) Cloud<i class="val">75%</i></span>
+              <span class="skill">Amazon Web Services (AWS) Cloud<i class="val">Intermediate</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -291,15 +290,39 @@
 
           <div class="col-lg-6" data-aos="fade-up">
             <div class="progress">
-              <span class="skill">Tableau<i class="val">75%</i></span>
+              <span class="skill">Tableau<i class="val">Intermediate</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
           </div>
         </div>
 
+        <h3>Office Application</h3>
+        <div class="row skills-content">
+
+          <div class="col-lg-6" data-aos="fade-up">
+            <div class="progress">
+              <span class="skill">Excel<i class="val">Advanced</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6" data-aos="fade-up">
+            <div class="progress">
+              <span class="skill">Spreadsheet<i class="val">Advanced</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
       </div>
     </section><!-- End Skills Section -->
 
@@ -310,8 +333,8 @@
         <div class="section-title">
           <h2>Resume</h2>
         </div>
-        <a href="#about" class="btn btn-primary btn-xl">My Resume</a>
-        <span style="font-size: small">Last Update: Apr. 2022</span>
+        <a href="resume/CV_Fajar Adi Prasetio.pdf" class="btn btn-primary btn-xl">My Resume</a>
+        <span style="font-size: small">Last Update: Des. 2022</span>
         <!--
 
         <div class="row">
@@ -372,41 +395,61 @@
     </section><!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <!--
+
     <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-data">Data Analytics</li>
+              <li data-filter=".filter-ML">Machine Learning</li>
+              <li data-filter=".filter-web">Back End</li>
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-data">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide1.jpg" class="img-fluid" alt="">
+              <h3 style="text-align: center">Cyclistic: Google Data Analytics Project</h3><br>
+              Final project to get Google Data Analytics Professional Certificate</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="cyclistic.html" title="More Details"><i class="bx bx-detail"></i></a>
               </div>
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ML">
+            <div class="portfolio-wrap">
+              <img
+                src="assets\img\portfolio\machine-learning\image-recognition-classifier-using-convolutional-neural-network\rock-scissor-paper.jpg"
+                class="img-fluid" alt="">
+              <h3 style="text-align: center">Image Recognition Classifier Using Convolutional Neural Network</h3><br>
+              Final project to get certificate Belajar Machine Learning Pemula (Dicoding)<div class="portfolio-links">
+                <a href="image-recognition-classifier.html" title="More Details"><i class="bx bx-detail"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/bookshelf-api/bookshelf-api.jpg" class="img-fluid" alt="">
+              <h3 style="text-align: center">Bookshelf API</h3><br>
+              Final project to get certificate Belajar Membuat Aplikasi Back-End untuk Pemula (Dicoding)<div
+                class="portfolio-links">
+                <a href="bookshelf-api.html" title="More Details"><i class="bx bx-detail"></i></a>
+              </div>
+
+            </div>
+            <!--
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
@@ -417,89 +460,12 @@
               </div>
             </div>
           </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
+          -->
           </div>
 
         </div>
-
-      </div>
     </section>
-    -->
+
     <!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
@@ -727,7 +693,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>2022 | Fajar Adi Prasetio | iPortfolio Theme</span></strong>
+        &copy; Copyright <strong><span>2022 | Fajar Adi Prasetio</span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
