--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-data">
             <div class="portfolio-wrap">
-              <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide1.jpg" class="img-fluid" alt="">
+              <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide1.JPG" class="img-fluid" alt="">
               <h3 style="text-align: center">Cyclistic: Google Data Analytics Project</h3><br>
               Final project to get Google Data Analytics Professional Certificate</p>
               <div class="portfolio-links">
