--- a/cyclistic.html
+++ b/cyclistic.html
@@ -101,35 +101,35 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide1.jpg" alt="">
+                  <img src="assets/img/portfolio/data-analyst/Cyclistic/Slide1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide9.jpg" alt="">
+                  <img src="assets/img/portfolio/data-analyst/Cyclistic/Slide9.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide10.jpg" alt="">
+                  <img src="assets/img/portfolio/data-analyst/Cyclistic/Slide10.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide11.jpg" alt="">
+                  <img src="assets/img/portfolio/data-analyst/Cyclistic/Slide11.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide12.jpg" alt="">
+                  <img src="assets/img/portfolio/data-analyst/Cyclistic/Slide12.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide13.jpg" alt="">
+                  <img src="assets/img/portfolio/data-analyst/Cyclistic/Slide13.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide14.jpg" alt="">
+                  <img src="assets/img/portfolio/data-analyst/Cyclistic/Slide14.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide15.jpg" alt="">
+                  <img src="assets/img/portfolio/data-analyst/Cyclistic/Slide15.jpg" alt="">
                 </div>
 
               </div>
