--- a/image-recognition-classifier.html
+++ b/image-recognition-classifier.html
@@ -108,19 +108,19 @@
 
                 <div class="swiper-slide">
                   <img
-                    src="assets\img\portfolio\machine-learning\image-recognition-classifier-using-convolutional-neural-network\train-accuracy.jpg"
+                    src="assets\img\portfolio\machine-learning\image-recognition-classifier-using-convolutional-neural-network\train-accuracy.JPG"
                     alt="">
                 </div>
 
                 <div class="swiper-slide">
                   <img
-                    src="assets\img\portfolio\machine-learning\image-recognition-classifier-using-convolutional-neural-network\train-loss.jpg"
+                    src="assets\img\portfolio\machine-learning\image-recognition-classifier-using-convolutional-neural-network\train-loss.JPG"
                     alt="">
                 </div>
 
                 <div class="swiper-slide">
                   <img
-                    src="assets\img\portfolio\machine-learning\image-recognition-classifier-using-convolutional-neural-network\predict.jpg"
+                    src="assets\img\portfolio\machine-learning\image-recognition-classifier-using-convolutional-neural-network\predict.JPG"
                     alt="">
                 </div>
 
