--- a/bookshelf-api.html
+++ b/bookshelf-api.html
@@ -105,7 +105,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\bookshelf-api\result.jpg" alt="">
+                  <img src="assets\img\portfolio\bookshelf-api\result.JPG" alt="">
                 </div>
 
               </div>
