update index, fortofolio

--- a/image-recognition-classifier.html
+++ b/image-recognition-classifier.html
@@ -135,9 +135,9 @@
               <ul>
                 <li><strong>Category</strong>: Machine Learning</li>
                 <li><strong>Project date</strong>: 17 November, 2022</li>
-                <li><strong>Tools</strong>: Google Colab</li>
+                <li><strong>Tools</strong>: Jupyter Notebook</li>
                 <li><strong>Programming Language</strong>: Python</li>
-                <li><strong>Framework</strong>: TensorFlow, Scikit Learn, Keras</li>
+                <li><strong>Framework</strong>: TensorFlow, Scikit Learn, Keras, Pandas, Numpy, Matplotlib</li>
               </ul>
             </div>
             <div class="portfolio-description">
