--- a/hci-credit-score.html
+++ b/hci-credit-score.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Cyclistic: Google Data Analytics Project</title>
+  <title>Portfolio Details - HCI Credit Score</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -80,10 +80,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Cyclistic: Google Data Analytics Project</h2>
+          <h2>HCI Credit Score Model</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Cyclistic: Google Data Analytics Project</li>
+            <li>HCI Credit Score Model</li>
           </ol>
         </div>
 
@@ -101,35 +101,43 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide1.jpg" alt="">
+                  <img src="assets\img\portfolio\data-science\hci-credit-score\Slide1.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide9.jpg" alt="">
+                  <img src="assets\img\portfolio\data-science\hci-credit-score\Slide2.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide10.jpg" alt="">
+                  <img src="assets\img\portfolio\data-science\hci-credit-score\Slide3.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide11.jpg" alt="">
+                  <img src="assets\img\portfolio\data-science\hci-credit-score\Slide4.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide12.jpg" alt="">
+                  <img src="assets\img\portfolio\data-science\hci-credit-score\Slide5.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide13.jpg" alt="">
+                  <img src="assets\img\portfolio\data-science\hci-credit-score\Slide6.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide14.jpg" alt="">
+                  <img src="assets\img\portfolio\data-science\hci-credit-score\Slide7.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide15.jpg" alt="">
+                  <img src="assets\img\portfolio\data-science\hci-credit-score\Slide8.PNG" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets\img\portfolio\data-science\hci-credit-score\Slide9.PNG" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets\img\portfolio\data-science\hci-credit-score\Slide10.PNG" alt="">
                 </div>
 
               </div>
@@ -141,32 +149,28 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Data Analytics</li>
-                <li><strong>Project date</strong>: 14 November, 2022</li>
-                <li><strong>Tools</strong>: Microsoft Excel, RStudio</li>
-                <li><strong>Programming Language</strong>: R</li>
-                <li><strong>Packages</strong>: Tidyverse, Readxl, Lubridate, Ggplot2, Here, Janitor, Skimr, Gghighlight,
-                  Reshape2, Geosphere, RColorBrewer</li>
+                <li><strong>Category</strong>: Data Science</li>
+                <li><strong>Project date</strong>: 16 January, 2023</li>
+                <li><strong>Tools</strong>: Jupyter Notebook</li>
+                <li><strong>Programming Language</strong>: Python</li>
+                <li><strong>Framework</strong>: TensorFlow, Keras, Scikit Learn, Pandas, Numpy, Matplotlib</li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Cyclistic: Google Data Analytics Project</h2>
+              <h2>HCI Credit Score Model</h2>
               <p>
                 <!--<h4>Target</h4>
                 <p>Memaksimalkan jumlah anggota tahunan berdasarkan analisis kebiasaan pengguna untuk meningkatkan keuntungan dan mengembangkan bisnis</p>
                 -->
-              <h4>Methodology</h4>
+              <h4>Highlights</h4>
               <ul>
-                <li><strong>Ask</strong>: Menanyakan dan mendefinisikan masalah</li>
-                <li><strong>Prepare</strong>: Mempersiapkan data dengan mengumpulkan dan menyimpan informasi kedalam
-                  data</li>
-                <li><strong>Process</strong>: Membersihkan dan mengecek data, apakah ada data kosong, data duplikat dll
-                </li>
-                <li><strong>Analyze</strong>: Menganalisis data untuk menemukan pola, tren, atau hubungan lainnya</li>
-                <li><strong>Share</strong>: Membagikan hasil analisis data</li>
-                <li><strong>Act</strong>: Rekomendasi dari hasil analisis data</li>
+                <ul>
+                  <li>The model can reduce number of defaults</li>
+                  <li>Using WoE metodhology to describe as a measure of the separation of good and bad creditors</li>
+                  <li>Using Supervised Learning algorithm and Logistic Regression model</li>
+                </ul>
               </ul>
-              <a href="https://github.com/FajarAdi25/Cyclistic-Google-Data-Analytics-Project/raw/main/Presentation%20Cyclistic.pdf"
+              <a href="https://github.com/FajarAdi25/HCI-Credit-Score/blob/main/HCI%20Credit%20Risk%20Analysis.pdf"
                 class="btn btn-primary btn-xl">View Presentation</a>
               </p>
 
