--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Fajar Adi Prasetio</h1>
-      <p>I'm <span class="typed" data-typed-items="AI Enthusiast, Programming Developer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Data Analyst, Data Scientist, Programmer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -95,7 +95,7 @@
             <img src="assets/img/profile-img.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>AI Enthusiast &amp; Programming Developer.</h3>
+            <h3>Data Analyst, Data Scientist &amp; Programmer.</h3>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -204,9 +204,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Python <i class="val">Intermediate</i></span>
+              <span class="skill">Python <i class="val">Advanced</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -224,9 +224,9 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">SQL <i class="val">Intermediate</i></span>
+              <span class="skill">SQL <i class="val">Advanced</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -408,6 +408,7 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-data">Data Analytics</li>
+              <li data-filter=".filter-data-science">Data Science</li>
               <li data-filter=".filter-ML">Machine Learning</li>
               <li data-filter=".filter-web">Back End</li>
             </ul>
@@ -423,6 +424,19 @@
               Final project to get Google Data Analytics Professional Certificate</p>
               <div class="portfolio-links">
                 <a href="cyclistic.html" title="More Details"><i class="bx bx-detail"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-data-science">
+            <div class="portfolio-wrap">
+              <img src="assets\img\portfolio\data-science\hci-credit-score\Slide1.PNG" class="img-fluid" alt="">
+              <h3 style="text-align: center">HCI Credit Score Model</h3><br>
+              The Credit Score Model can help companies ensure that creditors who can make repayments are rejected or
+              not when applying for a loan
+              </p>
+              <div class="portfolio-links">
+                <a href="hci-credit-score.html" title="More Details"><i class="bx bx-detail"></i></a>
               </div>
             </div>
           </div>
