--- a/customer-churn.html
+++ b/customer-churn.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - HCI Credit Score</title>
+  <title>Portfolio Details - Customer Churn</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -80,10 +80,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>HCI Credit Score Model</h2>
+          <h2>Customer Churn</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>HCI Credit Score Model</li>
+            <li>Customer Churn</li>
           </ol>
         </div>
 
@@ -101,43 +101,99 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-science\hci-credit-score\Slide1.PNG" alt="">
+                  <img src="assets\img\portfolio\data-science\customer-churn\Slide1.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-science\hci-credit-score\Slide2.PNG" alt="">
+                  <img src="assets\img\portfolio\data-science\customer-churn\Slide2.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-science\hci-credit-score\Slide3.PNG" alt="">
+                  <img src="assets\img\portfolio\data-science\customer-churn\Slide3.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-science\hci-credit-score\Slide4.PNG" alt="">
+                  <img src="assets\img\portfolio\data-science\customer-churn\Slide4.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-science\hci-credit-score\Slide5.PNG" alt="">
+                  <img src="assets\img\portfolio\data-science\customer-churn\Slide5.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-science\hci-credit-score\Slide6.PNG" alt="">
+                  <img src="assets\img\portfolio\data-science\customer-churn\Slide6.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-science\hci-credit-score\Slide7.PNG" alt="">
+                  <img src="assets\img\portfolio\data-science\customer-churn\Slide7.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-science\hci-credit-score\Slide8.PNG" alt="">
+                  <img src="assets\img\portfolio\data-science\customer-churn\Slide8.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-science\hci-credit-score\Slide9.PNG" alt="">
+                  <img src="assets\img\portfolio\data-science\customer-churn\Slide9.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-science\hci-credit-score\Slide10.PNG" alt="">
+                  <img src="assets\img\portfolio\data-science\customer-churn\Slide10.PNG" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets\img\portfolio\data-science\customer-churn\Slide11.PNG" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets\img\portfolio\data-science\customer-churn\Slide12.PNG" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets\img\portfolio\data-science\customer-churn\Slide13.PNG" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets\img\portfolio\data-science\customer-churn\Slide14.PNG" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets\img\portfolio\data-science\customer-churn\Slide15.PNG" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets\img\portfolio\data-science\customer-churn\Slide16.PNG" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets\img\portfolio\data-science\customer-churn\Slide17.PNG" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets\img\portfolio\data-science\customer-churn\Slide18.PNG" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets\img\portfolio\data-science\customer-churn\Slide19.PNG" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets\img\portfolio\data-science\customer-churn\Slide20.PNG" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets\img\portfolio\data-science\customer-churn\Slide21.PNG" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets\img\portfolio\data-science\customer-churn\Slide22.PNG" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets\img\portfolio\data-science\customer-churn\Slide23.PNG" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets\img\portfolio\data-science\customer-churn\Slide24.PNG" alt="">
                 </div>
 
               </div>
@@ -150,18 +206,15 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Data Science</li>
-                <li><strong>Project date</strong>: 16 January, 2023</li>
+                <li><strong>Project date</strong>: 12 April, 2023</li>
                 <li><strong>Tools</strong>: Jupyter Notebook</li>
                 <li><strong>Programming Language</strong>: Python</li>
                 <li><strong>Framework</strong>: TensorFlow, Keras, Scikit Learn, Pandas, Numpy, Matplotlib</li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>HCI Credit Score Model</h2>
+              <h2>Customer Churn</h2>
               <p>
-                <!--<h4>Target</h4>
-                <p>Memaksimalkan jumlah anggota tahunan berdasarkan analisis kebiasaan pengguna untuk meningkatkan keuntungan dan mengembangkan bisnis</p>
-                -->
               <h4>Highlights</h4>
               <ul>
                 <ul>
