--- a/index.html
+++ b/index.html
@@ -462,6 +462,18 @@
                 <a href="bookshelf-api.html" title="More Details"><i class="bx bx-detail"></i></a>
               </div>
 
+              <div class="col-lg-4 col-md-6 portfolio-item filter-data-science">
+                <div class="portfolio-wrap">
+                  <img src="assets\img\portfolio\data-science\customer-churn\Slide1.PNG" class="img-fluid" alt="">
+                  <h3 style="text-align: center">Customer Churn Prediction</h3><br>
+                  Melakukan prediksi agar bisa memetakan strategi bisnis untuk mempertahankan pelanggan.
+                  </p>
+                  <div class="portfolio-links">
+                    <a href="customer-churn.html" title="More Details"><i class="bx bx-detail"></i></a>
+                  </div>
+                </div>
+              </div>
+
             </div>
             <!--
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
