--- a/customer-churn.html
+++ b/customer-churn.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Customer Churn</title>
+  <title>Portfolio Details - Customer Churn Prediction</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -80,10 +80,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Customer Churn</h2>
+          <h2>Customer Churn Prediction</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Customer Churn</li>
+            <li>Customer Churn Prediction</li>
           </ol>
         </div>
 
@@ -213,14 +213,14 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Customer Churn</h2>
+              <h2>Customer Churn Prediction</h2>
               <p>
               <h4>Highlights</h4>
               <ul>
                 <ul>
-                  <li>The model can reduce number of defaults</li>
-                  <li>Using WoE metodhology to describe as a measure of the separation of good and bad creditors</li>
-                  <li>Using Supervised Learning algorithm and Logistic Regression model</li>
+                  <li>Membuat model machine learning yang dapat memprediksi pelanggan yang berpotensi churn</li>
+                  <li>Menggunakan Random Forest Model dan algoritma Supervised Learning</li>
+                  <li>Memberikan rekomendasi kepada perusahaan atas hasil analisis</li>
                 </ul>
               </ul>
               <a href="https://github.com/FajarAdi25/HCI-Credit-Score/blob/main/HCI%20Credit%20Risk%20Analysis.pdf"
