--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
           <h2>Resume</h2>
         </div>
         <a href="resume/CV_Fajar Adi Prasetio.pdf" class="btn btn-primary btn-xl">My Resume</a>
-        <span style="font-size: small">Last Update: Des. 2022</span>
+        <span style="font-size: small">Last Update: April. 2023</span>
         <!--
 
         <div class="row">
@@ -431,10 +431,9 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-data-science">
             <div class="portfolio-wrap">
               <img src="assets\img\portfolio\data-science\hci-credit-score\Slide1.PNG" class="img-fluid" alt="">
-              <h3 style="text-align: center">HCI Credit Score Model</h3><br>
+              <h3 style="text-align: center">HCI Credit Score Model</h3>
               The Credit Score Model can help companies ensure that creditors who can make repayments are rejected or
               not when applying for a loan
-              </p>
               <div class="portfolio-links">
                 <a href="hci-credit-score.html" title="More Details"><i class="bx bx-detail"></i></a>
               </div>
@@ -461,21 +460,21 @@
                 class="portfolio-links">
                 <a href="bookshelf-api.html" title="More Details"><i class="bx bx-detail"></i></a>
               </div>
-
-              <div class="col-lg-4 col-md-6 portfolio-item filter-data-science">
-                <div class="portfolio-wrap">
-                  <img src="assets\img\portfolio\data-science\customer-churn\Slide1.PNG" class="img-fluid" alt="">
-                  <h3 style="text-align: center">Customer Churn Prediction</h3><br>
-                  Melakukan prediksi agar bisa memetakan strategi bisnis untuk mempertahankan pelanggan.
-                  </p>
-                  <div class="portfolio-links">
-                    <a href="customer-churn.html" title="More Details"><i class="bx bx-detail"></i></a>
-                  </div>
-                </div>
-              </div>
-
             </div>
-            <!--
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-data-science">
+            <div class="portfolio-wrap">
+              <img src="assets\img\portfolio\data-science\customer-churn\Slide1.PNG" class="img-fluid" alt="">
+              <h3 style="text-align: center">Customer Churn Prediction</h3>
+              Melakukan prediksi agar bisa memetakan strategi bisnis untuk mempertahankan pelanggan.
+              <div class="portfolio-links">
+                <a href="customer-churn.html" title="More Details"><i class="bx bx-detail"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <!--
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
@@ -487,9 +486,9 @@
             </div>
           </div>
           -->
-          </div>
-
         </div>
+
+      </div>
     </section>
 
     <!-- End Portfolio Section -->
@@ -719,7 +718,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>2022 | Fajar Adi Prasetio</span></strong>
+        &copy; Copyright <strong><span>2023 | Fajar Adi Prasetio</span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
