--- a/index.html
+++ b/index.html
@@ -297,6 +297,16 @@
               </div>
             </div>
           </div>
+
+          <div class="col-lg-6" data-aos="fade-up">
+            <div class="progress">
+              <span class="skill">Looker Studio<i class="val">Intermediate</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
 
         <h3>Office Application</h3>
