--- a/customer-churn.html
+++ b/customer-churn.html
@@ -220,10 +220,9 @@
                 <ul>
                   <li>Membuat model machine learning yang dapat memprediksi pelanggan yang berpotensi churn</li>
                   <li>Menggunakan Random Forest Model dan algoritma Supervised Learning</li>
-                  <li>Memberikan rekomendasi kepada perusahaan atas hasil analisis</li>
                 </ul>
               </ul>
-              <a href="https://github.com/FajarAdi25/HCI-Credit-Score/blob/main/HCI%20Credit%20Risk%20Analysis.pdf"
+              <a href="https://github.com/FajarAdi25/customer-churn/blob/main/customer_churn.pptx"
                 class="btn btn-primary btn-xl">View Presentation</a>
               </p>
 
