update portfolio section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Fajar's Portfolio - Index</title>
+  <title>Fajar's Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -47,7 +47,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.png" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Fajar Adi Prasetio</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://wa.me/+6289619267375" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
@@ -75,7 +75,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Fajar Adi Prasetio</h1>
-      <p>I'm <span class="typed" data-typed-items="Data Analyst, Data Scientist, Programmer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Programmer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -92,19 +92,21 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.png" class="img-fluid" alt="">
+            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Data Analyst, Data Scientist &amp; Programmer.</h3>
+            <h3>Programmer.</h3>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <!--<li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>-->
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
-                    <span>https://fajaradi25.github.io/</span>
-                  </li>
+                    <a href="https://fajaradi25.github.io/"><span>https://fajaradi25.github.io/</span>
+                    </li></a>
+                    
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
-                    <span>fajaradiprasetio@gmail.com</span>
+                    <a href="mailto:fajaradiprasetio@gmail.com"><span>fajaradiprasetio@gmail.com</span></a>
+                    
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+62 896 1926 7375</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>South Jakarta, Indonesia</span>
                   </li>
@@ -124,9 +126,12 @@
               </div>
             </div>
             <p>
-              Graduated from the Informatics Engineering department at Universitas Indraprasta. Highly passionate about
-              AI and Programming. Have knowledge using Python, R, SQL, JavaScript, HTML, and CSS. Able to work in a team
-              and have good communication skills. </p>
+              Graduated from Informatics Engineering department at Universitas Indraprasta and bootcamp
+Full Stack Web and Mobile Developer at Pijar Camp by Telkom Indonesia. Highly passionate
+about data science and programming. Driven by perseverance, analytical thinking and
+problem solving. Knowledgeable in Python, JavaScript, SQL, and others. Have experience in
+working on data, web and mobile apps programming projects. Able to work in a team and
+have good communication skills.</p>
           </div>
         </div>
 
@@ -184,7 +189,7 @@
     <!-- End Facts Section -->
 
     <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills section-bg">
+    <!-- <section id="skills" class="skills section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -334,7 +339,8 @@
 
         </div>
       </div>
-    </section><!-- End Skills Section -->
+    </section> -->
+    <!-- End Skills Section -->
 
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
@@ -343,8 +349,8 @@
         <div class="section-title">
           <h2>Resume</h2>
         </div>
-        <a href="resume/CV_Fajar Adi Prasetio.pdf" class="btn btn-primary btn-xl">My Resume</a>
-        <span style="font-size: small">Last Update: April. 2023</span>
+        <a href="resume/CV - Fajar Adi Prasetio (ENG).pdf" class="btn btn-primary btn-xl">My Resume</a>
+        <span style="font-size: small">Last Update: May. 2024</span>
         <!--
 
         <div class="row">
@@ -417,10 +423,12 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-data">Data Analytics</li>
-              <li data-filter=".filter-data-science">Data Science</li>
-              <li data-filter=".filter-ML">Machine Learning</li>
-              <li data-filter=".filter-web">Back End</li>
+              <li data-filter=".filter-data">Data Science</li>
+              <!-- <li data-filter=".filter-data-science">Data Science</li> -->
+              <li data-filter=".filter-ml">Machine Learning</li>
+              <li data-filter=".filter-be">Back End</li>
+              <li data-filter=".filter-web">Website</li>
+              <li data-filter=".filter-mobile">Mobile Apps</li>
             </ul>
           </div>
         </div>
@@ -438,7 +446,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-data-science">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-data">
             <div class="portfolio-wrap">
               <img src="assets\img\portfolio\data-science\hci-credit-score\Slide1.PNG" class="img-fluid" alt="">
               <h3 style="text-align: center">HCI Credit Score Model</h3>
@@ -450,7 +458,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-ML">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
             <div class="portfolio-wrap">
               <img
                 src="assets\img\portfolio\machine-learning\image-recognition-classifier-using-convolutional-neural-network\rock-scissor-paper.jpg"
@@ -462,7 +470,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-be">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/bookshelf-api/bookshelf-api.jpg" class="img-fluid" alt="">
               <h3 style="text-align: center">Bookshelf API</h3><br>
@@ -477,9 +485,30 @@
             <div class="portfolio-wrap">
               <img src="assets\img\portfolio\data-science\customer-churn\Slide1.PNG" class="img-fluid" alt="">
               <h3 style="text-align: center">Customer Churn Prediction</h3>
-              Melakukan prediksi agar bisa memetakan strategi bisnis untuk mempertahankan pelanggan.
+              Make predictions about Customer Churn to sustain customer members.
               <div class="portfolio-links">
                 <a href="customer-churn.html" title="More Details"><i class="bx bx-detail"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets\img\portfolio\mama-recipe\Slide3.PNG" class="img-fluid" alt="">
+              <h3 style="text-align: center">Mama Recipe Website</h3>
+              Mama Recipe is a dynamic online platform that allows users to share their own recipes with others.
+              <div class="portfolio-links">
+                <a href="mama-recipe-web.html" title="More Details"><i class="bx bx-detail"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-mobile">
+            <div class="portfolio-wrap">
+              <img src="assets\img\portfolio\mama-recipe-mobile\Slide1.PNG" class="img-fluid" alt="">
+              <h3 style="text-align: center">Mama Recipe Mobile</h3>
+              Mama Recipe are aims to create a vibrant community of food enthusiasts who can connect, learn, and appreciate the art of cooking together..
+              <div class="portfolio-links">
+                <a href="mama-recipe-mobile.html" title="More Details"><i class="bx bx-detail"></i></a>
               </div>
             </div>
           </div>
@@ -728,14 +757,14 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>2023 | Fajar Adi Prasetio</span></strong>
+        &copy; Copyright <strong><span>2024 | Fajar Adi Prasetio</span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
       </div>
     </div>
   </footer><!-- End  Footer -->
