--- a/mama-recipe-mobile.html
+++ b/mama-recipe-mobile.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Cyclistic: Google Data Analytics Project</title>
+  <title>Portfolio Details - Mama Recipe Mobile</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -80,10 +80,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Cyclistic: Google Data Analytics Project</h2>
+          <h2>Mama Recipe Mobile</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Cyclistic: Google Data Analytics Project</li>
+            <li>Mama Recipe Mobile</li>
           </ol>
         </div>
 
@@ -101,35 +101,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide1.jpg" alt="">
+                  <img src="assets\img\portfolio\mama-recipe-mobile\Slide1.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide9.jpg" alt="">
+                  <img src="assets\img\portfolio\mama-recipe-mobile\Slide2.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide10.jpg" alt="">
+                  <img src="assets\img\portfolio\mama-recipe-mobile\Slide3.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide11.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide12.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide13.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide14.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets\img\portfolio\data-analyst\Cyclistic\Slide15.jpg" alt="">
+                  <img src="assets\img\portfolio\mama-recipe-mobile\Slide4.PNG" alt="">
                 </div>
 
               </div>
@@ -141,33 +125,26 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Data Analytics</li>
-                <li><strong>Project date</strong>: 14 November, 2022</li>
-                <li><strong>Tools</strong>: Microsoft Excel, RStudio</li>
-                <li><strong>Programming Language</strong>: R</li>
-                <li><strong>Packages</strong>: Tidyverse, Readxl, Lubridate, Ggplot2, Here, Janitor, Skimr, Gghighlight,
-                  Reshape2, Geosphere, RColorBrewer</li>
+                <li><strong>Category</strong>: Mobile</li>
+                <li><strong>Project date</strong>: January, 2024</li>
+                <li><strong>Tools</strong>: Visual Studio Code, Git, Github</li>
+                <li><strong>Programming Language</strong>: HTML, CSS, Javascript, SQL</li>
+                <li><strong>Database</strong>: PostgreSQL</li>
+                <li><strong>Library / Framework</strong>: React Native, Redux Thunk, Bootstrap, NodeJs, Express</li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Cyclistic: Google Data Analytics Project</h2>
+              <h2>Mama Recipe Mobile</h2>
               <p>
                 <!--<h4>Target</h4>
                 <p>Memaksimalkan jumlah anggota tahunan berdasarkan analisis kebiasaan pengguna untuk meningkatkan keuntungan dan mengembangkan bisnis</p>
                 -->
-              <h4>Methodology</h4>
-              <ul>
-                <li><strong>Ask</strong>: Menanyakan dan mendefinisikan masalah</li>
-                <li><strong>Prepare</strong>: Mempersiapkan data dengan mengumpulkan dan menyimpan informasi kedalam
-                  data</li>
-                <li><strong>Process</strong>: Membersihkan dan mengecek data, apakah ada data kosong, data duplikat dll
-                </li>
-                <li><strong>Analyze</strong>: Menganalisis data untuk menemukan pola, tren, atau hubungan lainnya</li>
-                <li><strong>Share</strong>: Membagikan hasil analisis data</li>
-                <li><strong>Act</strong>: Rekomendasi dari hasil analisis data</li>
-              </ul>
-              <a href="https://github.com/FajarAdi25/Cyclistic-Google-Data-Analytics-Project/raw/main/Presentation%20Cyclistic.pdf"
-                class="btn btn-primary btn-xl">View Presentation</a>
+              <h4>Description</h4>
+              <p>Mama Recipe is a dynamic online platform that allows users to share their own recipes with others while also exploring a wide range of culinary creations contributed by other users. The platform aims to create a vibrant community of food enthusiasts who can connect, learn, and appreciate the art of cooking together. I built this website as
+                a full stack developer.
+                </p>
+              <a href="https://bit.ly/mama-recipe-apk"
+                class="btn btn-primary btn-xl">See Demo</a>
               </p>
 
               </p>
@@ -192,7 +169,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
       </div>
     </div>
   </footer><!-- End  Footer -->
